# recipes_bd

./: LICENSE  main.py  pyproject.toml  recipes.db
database/: database.py
models/: ingredient.py  recipe.py  recipe_ingredient.py
orm/: category.py  ingredient.py  recipe.py  recipe_ingredient.py
pages/: category.py  ingredient.py  recipe.py
repositories/: category.py  ingredient.py  recipe.py  recipe_ingredient.py
routers/: category.py  ingredient.py  recipe.py  recipe_ingredient.py
templates/: categories.html  header.html  ingredients.html  recipe.html  recipes.html
